Update sidr. Fix #73 navigation on mobile.

--- a/heldev/static/sass/_sidr.scss
+++ b/heldev/static/sass/_sidr.scss
@@ -1,27 +1,32 @@
+
 // Fonts
 $sidr-font-family: 'Lato',verdana,arial,sans-serif;
 $sidr-font-size: 1.5em;
 
 // Colors
-$sidr-background : #333333;
-$sidr-background-shadow-color : $devblue;
-$sidr-text-color: #FFF;
+$sidr-background: #333;
+$sidr-background-shadow-color: #222;
+$sidr-text-color: #fff;
+$sidr-box-shadow-color: #000;
+$sidr-input-background-color: #000;
 
+// Width
+$sidebar-width: 280px;
+$sidebar-width-neg: -280px;
 
 .sidr {
-    /* Default Settings */
-    display: none;
-    position: absolute;
+    // Default Settings
+    display: block;
     position: fixed;
     top: 0;
     height: 100%;
     z-index: 999999;
-    width: 260px;
-    overflow-x: none;
+    width: $sidebar-width;
+    overflow-x: hidden;
     overflow-y: auto;
 
     .sidr-inner {
-        padding: rhythm(1) 0;
+        padding: 3em 0 1em;
 
         > p {
             margin-left: 15px;
@@ -31,15 +36,15 @@ $sidr-text-color: #FFF;
 
     &.right {
         left: auto;
-        right: -260px;
+        right: $sidebar-width-neg;
     }
 
     &.left {
-        left: -260px;
+        left: $sidebar-width-neg;
         right: auto;
     }
 
-    /* Theme Settings */
+    // Theme Settings
     font-family: $sidr-font-family;
     font-size: $sidr-font-size;
     background: $sidr-background;
@@ -47,23 +52,27 @@ $sidr-text-color: #FFF;
     font-weight: 900;
     font-style: italic;
     letter-spacing: .04em;
-  
-    @include single-box-shadow($sidr-background-shadow-color, 0, 0, 5px, 5px, inset);
 
-    h1, h2, h3, h4, h5, h6 {
+    h1,
+    h2,
+    h3,
+    h4,
+    h5,
+    h6 {
+        @include background-image(linear-gradient(lighten($sidr-background, 10%), darken($sidr-background, 10%)));
         font-size: $sidr-font-size - 4;
         font-weight: normal;
         padding: 0 15px;
         margin: 0 0 5px;
         color: $sidr-text-color;
         line-height: 24px;
-        @include background-image(linear-gradient(lighten($sidr-background, 10%), darken($sidr-background, 10%)));
-        @include single-box-shadow(rgba(#000, .2), 0, 5px, 5px, 3px);
+        box-shadow: 0 5px 5px 3px rgba($sidr-box-shadow-color, .2);
     }
 
     p {
         font-size: $sidr-font-size - 2;
         margin: 0 0 12px;
+
         a {
             color: rgba($sidr-text-color, .9);
         }
@@ -78,21 +87,31 @@ $sidr-text-color: #FFF;
         display: block;
         margin: 0 0 15px;
         padding: 0;
+        //border-top: 1px solid darken($sidr-background, 10%);
+        //border-bottom: 1px solid lighten($sidr-background, 10%);
 
         li {
             display: block;
             margin: 0;
-            line-height: 2em;
+            line-height: 48px;
+            //border-top: 1px solid lighten($sidr-background, 10%);
+            //border-bottom: 1px solid darken($sidr-background, 10%);
+
             &:hover,
             &.active,
             &.sidr-class-active {
-                border-top: none;
-                > a, > span {
+                border-top: 0;
+                line-height: 49px;
+
+                > a,
+                > span {
+                    //box-shadow: 0 0 15px 3px $sidr-background-shadow-color inset;
                     color: $devyellow;
                 }
             }
 
-            a, span {
+            a,
+            span {
                 padding: 0 15px;
                 display: block;
                 text-decoration: none;
@@ -100,29 +119,32 @@ $sidr-text-color: #FFF;
             }
 
             ul {
-                border-bottom: none;
+                border-bottom: 0;
                 margin: 0;
+
                 li {
                     line-height: 40px;
                     font-size: $sidr-font-size - 2;
 
                     &:last-child {
-                        border-bottom: none;
+                        border-bottom: 0;
                     }
 
                     &:hover,
                     &.active,
                     &.sidr-class-active {
-                        border-top: none;
+                        border-top: 0;
                         line-height: 41px;
 
-                        > a, > span {
+                        > a,
+                        > span {
                             color: $devyellow;
-                            color: $devyellow;
+                            //box-shadow: 0 0 15px 3px $sidr-background-shadow-color inset;
                         }
                     }
 
-                    a, span {
+                    a,
+                    span {
                         color: rgba($sidr-text-color, .8);
                         padding-left: 30px;
                     }
@@ -149,15 +171,16 @@ $sidr-text-color: #FFF;
     input[type="tel"],
     input[type="time"],
     input[type="url"],
-    textarea, select {
+    textarea,
+    select {
         width: 100%;
         font-size: $sidr-font-size - 2;
         padding: 5px;
         @include box-sizing(border-box);
         margin: 0 0 10px;
-        @include border-radius(2px);
-        border: none;
-        background: rgba(#000, .1);
+        border-radius: 2px;
+        border: 0;
+        background: rgba($sidr-input-background-color, .1);
         color: rgba($sidr-text-color, .6);
         display: block;
         clear: both;
